# android

./: .gitignore  .gitmodules  CHANGES.md  Gemfile  NEW_RELEASE.md  README.md  ar_build_app_git.sh  ar_build_app_tar.sh  ar_builder_setup.sh  build.gradle  build.gradle.kts  build.sh  build_app.sh  build_app_git.sh  build_app_tar.sh  builder_setup.sh  create_release_tar.sh  fetch_libs.sh  gradle.properties  settings.gradle
.github/workflows/: build.yaml  check.yaml
app/: app-release.apk  build.gradle  proguard-rules.pro
app/src/androidTest/java/net/tuxed/vpnconfigimporter/: ApplicationTest.java  UnitTestSuite.java
app/src/androidTest/java/net/tuxed/vpnconfigimporter/service/: HistoryServiceTest.java  PreferencesServiceTest.java  SerializerServiceTest.java
app/src/androidTest/java/net/tuxed/vpnconfigimporter/utils/: FormattingUtilsTest.java  TTLCacheTest.java
app/src/androidTest/java/nl/eduvpn/app/: BaseRobot.kt  EspressoExtensions.kt  UnitTestSuite.java  WaitUntilGoneAction.kt
app/src/androidTest/java/nl/eduvpn/app/service/: HistoryServiceTest.java  HistoryServiceTest.kt  PreferencesServiceTest.java  PreferencesServiceTest.kt  SecurityServiceTest.java  SecurityServiceTest.kt  SerializerServiceTest.java
app/src/androidTest/java/nl/eduvpn/app/ui_test/: BrowserTest.kt  ConnectVpnTest.kt  ConnectionLogTest.kt  InstituteAccessDemoTest.kt  ProviderSearchTest.kt
app/src/androidTest/java/nl/eduvpn/app/utils/: FormattingUtilsTest.java  ParcelableTest.kt  TTLCacheTest.java
app/src/dev/res/values/: colors.xml  strings.xml
app/src/gov/res/drawable/: ic_application_logo.xml
app/src/gov/res/values/: colors.xml  strings.xml
app/src/home/res/drawable/: ic_launcher_foreground.xml
app/src/home/res/values/: colors.xml  strings.xml
app/src/home/res/values-de/: strings.xml
app/src/home/res/values-es/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: licenses.html
app/src/main/assets/config/: default_instance_list
app/src/main/java/net/tuxed/vpnconfigimporter/: ConfigDownloadActivity.java  Constants.java  Downloader.java  EduVPNApplication.java  MainActivity.java  RegisterActivity.java  VpnUtils.java
app/src/main/java/net/tuxed/vpnconfigimporter/adapter/: MessagesAdapter.java  ProfileAdapter.java  ProviderAdapter.java  ProvidersAdapter.java  SavedProfileAdapter.java
app/src/main/java/nl/eduvpn/app/: ApiLogsActivity.kt  CertExpiredBroadcastReceiver.kt  Constants.java  Constants.kt  DisconnectVPNBroadcastReceiver.kt  EduVPNApplication.java  LicenseActivity.kt  MainActivity.java  MainActivity.kt  OpenVpnLogsActivity.kt  SettingsActivity.java  SettingsActivity.kt
app/src/main/res/anim/: fade_in.xml  fade_out.xml  progress_indeterminate_horizontal_rect1.xml  progress_indeterminate_horizontal_rect2.xml
app/src/main/res/color/: bg_big_button.xml
app/src/main/res/drawable/: access_type_bg.xml  bg_progress_indeterminate_layers.xml  bg_progressbar_indeterminate.xml  bg_search.xml  button_bg.xml  dialog_background.xml  dialog_button_bg.xml  ic_add.xml  ic_add_server.xml  ic_application_logo.xml  ic_arrow_drop_down.xml  ic_chevron_right.xml  ic_connection_status_connected.xml  ic_connection_status_connecting.xml  ic_connection_status_disconnected.xml  ic_custom_url.xml  ic_eduvpn_logo.xml  ic_find_your_institute.xml  ic_help.xml  ic_institute.xml  ic_search.xml  ic_secure_internet.xml  ic_server.xml  ic_settings.xml  ic_vpn_profile.xml  ic_warning.xml  loading_gradient.xml  scrollbar_thumb.xml  switch_thumb.xml  switch_track.xml  switcher_bg.xml  switcher_button_bg.xml  switcher_button_bg_selected.xml  white_gradient.xml
app/src/main/res/interpolator/: progress_indeterminate_horizontal_rect1_scalex.xml  progress_indeterminate_horizontal_rect2_scalex.xml  progress_indeterminate_horizontal_rect2_translatex.xml
app/src/main/res/layout/: activity_api_logs.xml  activity_config_downloader.xml  activity_licenses.xml  activity_main.xml  activity_openvpn_logs.xml  activity_register.xml  activity_settings.xml  content_main.xml  dialog_error.xml  fragment_add_server.xml  fragment_connect_profile.xml  fragment_connection_status.xml  fragment_custom_provider.xml  fragment_home.xml  fragment_organization_selection.xml  fragment_profile_selection.xml  fragment_provider_selection.xml  fragment_server_selection.xml  fragment_settings.xml  fragment_type_selector.xml  include_loading.xml  include_toolbar.xml  list_item_config.xml  list_item_header.xml  list_item_message.xml  list_item_organization.xml  list_item_profile.xml  list_item_provider.xml  list_item_saved_profile.xml  list_item_server.xml  list_item_token_warning.xml  switch_container_connection_info.xml  switch_container_notifications.xml
app/src/main/res/menu/: logmenu.xml  menu_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  content_description.xml  dimens.xml  ids.xml  strings.xml  styles.xml
app/src/main/res/values-ca/: content_description.xml  strings.xml
app/src/main/res/values-de/: content_description.xml  strings.xml
app/src/main/res/values-es/: content_description.xml  strings.xml
app/src/test/java/net/tuxed/vpnconfigimporter/: ExampleUnitTest.java
common/: build.gradle  consumer-rules.pro
common/libs/: CMakeLists.txt
common/src/main/cpp/: jni.cpp
common/src/main/java/org/eduvpn/common/: CommonException.java  DataErrorTuple.java  FailoverResult.java  GoBackend.java  Protocol.java  ServerType.java  StateCB.java
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 11.txt  12.txt  120.txt  121.txt  130.txt  14.txt  16.txt  17.txt  18.txt  19.txt  200.txt  202.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  30.txt  31.txt  6.txt  7.txt  9.txt
features/: default.feature
features/step_definitions/: actions_steps.rb  app_steps.rb  input_steps.rb  text_steps.rb
features/support/: env.rb  hooks.rb
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
patches/android-rebuilds/: ar.patch
(+209 files in other folders)
